# robi-biometric-qdrant-vector-db-service

./: .env  .gitignore  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  api_spec.md  pyproject.toml  requirements.txt
docker/: Dockerfile.gpu  docker-compose.gpu.yml  docker-compose.yml
qdrant_storage/: raft_state.json
scripts/: migrate_from_faiss.py  performance_test.py  simple_test.py
src/: main.py
src/api/: endpoints.py  schemas.py
src/config/: settings.py
src/core/: advanced_indexing.py  gpu_optimizer.py  qdrant_client.py
src/utils/: logging_config.py  performance.py
test_results/: performance_test_results_20250909_214354.json
