[project]
name = "qdrant-service"
version = "0.1.0"
description = "High-performance Qdrant-based vector database service with GPU acceleration for face recognition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.7.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0",
    "cupy-cuda12x>=12.0.0",
    "asyncio-throttle>=1.0.0",
    "prometheus-client>=0.19.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "loguru>=0.7.0",
    "python-json-logger>=2.0.7",
    "requests>=2.32.5",
    "aiohttp>=3.12.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
